hphp/hack/test/typecheck/tconst/method_contravariant.php.exp
File "method_contravariant.php", line 35, characters 14-15:
Invalid argument (Typing[4110])
File "method_contravariant.php", line 12, characters 39-45:
This is an array key (int/string)
File "method_contravariant.php", line 4, characters 19-26:
  resulting from expanding the type constant X::T
File "method_contravariant.php", line 35, characters 14-15:
It is incompatible with a string
